--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
+    "sweetalert2": "^11.4.30",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
