--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "cafe-server",
+  "name": "portfolio-share-web",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js --exec babel-node",
     "pm2": "pm2 start index.js --interpreter babel-node",
-    "test": "jest --setupFiles dotenv/config"
+    "test": "jest --setupFiles dotenv/config",
+    "heroku-postbuild": "cd front && yarn install --only=dev && yarn install && yarn build"
   },
   "repository": {
     "type": "git",
@@ -49,5 +50,8 @@
     "modulePathIgnorePatterns": [
       "__config__"
     ]
+  },
+  "engines":{
+    "node": "16.14.0"
   }
 }
